Added html, validation, and error handlers
